--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     font-family: 'CinzelDecorative';
     src: url(fonts/CinzelDecorative-Bold.ttf);
 }
+@font-face {
+    font-family: 'SingleGhost';
+    src: url(fonts/SingleGhost-regular.ttf);
+}
 * {
     margin: 0;
     padding: 0;
@@ -42,7 +46,7 @@ body {
 }
 .portfolio-buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     z-index: 6;
 }
@@ -113,22 +117,11 @@ body {
 button {
     border: none;
     background-color: transparent;
-    cursor: pointer;
-    margin: 10px;
-    height: 50px;
-    width: 50px;
+    margin: 20px;
     transition: transform 0.5s;
 }
 button:focus {
     outline: none;
-}
-button:hover i {
-    color: #636363;
-}
-button svg {
-    color: rgb(255, 0, 0);
-    width: 100%;
-    height: 100%;
 }
 #p1 {
     z-index: 3;
@@ -162,4 +155,55 @@ hr {
     font-size: 20px;
     font-family: 'CinzelDecorative';
     text-shadow: 2px 0 rgb(0, 0, 0);
+}
+.arrow-book {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'SingleGhost';
+    font-size: 30px;
+    cursor: pointer;
+    color: white;
+    transition: 0.1s;
+}
+.blackout-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'SingleGhost';
+    font-size: 30px;
+    color: rgb(53, 53, 53);
+    transition: 0s;
+}
+.arrow-book:active {
+    font-size: 25px;
+    .arrow-top, .arrow-bottom {
+        width: 140px;
+        height: 20px;
+    }
+}
+.arrow-top {
+    width: 150px;
+    height: 25px;
+    background: linear-gradient(rgb(51, 51, 51), rgb(0, 0, 0));
+    transition: 0.1s;
+}
+.arrow-bottom {
+    width: 150px;
+    height: 25px;
+    background-color: rgb(0, 0, 0);
+    transition: 0.1s;
+}
+.arrow-right .arrow-top, .arrow-left .arrow-bottom {
+    transform: skew(60deg, 0deg);
+}
+.arrow-right .arrow-bottom, .arrow-left .arrow-top {
+    transform: skew(-60deg, 0deg);
+}
+.arrow-book p, .blackout-button p {
+    position: absolute;
+    z-index: 999;
+    place-items: center;
 }
