--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,11 @@ body {
     height: 500px;
     transition: transform 0.5s;
 }
+.book-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .eros-psycho {
     display: flex;
     justify-content: center;
@@ -67,6 +72,42 @@ body {
 .eros-psycho img {
     width: 400px;
     filter: drop-shadow(0 0 10px white);
+}
+.container-eros-psycho-book-bg {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+}
+.eros-psycho-book-bg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    height: 500px;
+    transform: rotate(-90deg);
+}
+.eros-psycho-book-bg img {
+    width: 450px;
+    filter: drop-shadow(0 0 10px white);
+}
+.bottom-eros-psycho-book-bg {
+     width: 1px;
+     height: 300px;
+}
+.container-callisto-book-header {
+    position: absolute;
+    z-index: 5;
+    font-family: 'SingleGhost';
+    font-size: 100px;
+    color: white;
+    -webkit-text-stroke: 1.3px black;
+    opacity: 0;
+    width: 280px;
+    transition: 0.3s;
+}
+.bottom-callisto-book-header {
+     width: 1px;
+     height: 570px;
 }
 .paper {
     position: absolute;
@@ -117,6 +158,8 @@ body {
 button {
     border: none;
     background-color: transparent;
+    width: 200px;
+    height: 50px;
     margin: 20px;
     transition: transform 0.5s;
 }
@@ -162,7 +205,7 @@ hr {
     justify-content: center;
     align-items: center;
     font-family: 'SingleGhost';
-    font-size: 30px;
+    font-size: 25px;
     cursor: pointer;
     color: white;
     transition: 0.1s;
@@ -173,12 +216,12 @@ hr {
     justify-content: center;
     align-items: center;
     font-family: 'SingleGhost';
-    font-size: 30px;
+    font-size: 25px;
     color: rgb(53, 53, 53);
     transition: 0s;
 }
 .arrow-book:active {
-    font-size: 25px;
+    font-size: 20px;
     .arrow-top, .arrow-bottom {
         width: 140px;
         height: 20px;
