New Feature Added and Bug Fixes
ADDED FEATURES:
Callisto proposed that you must click the image of Eros and Psycho for the book to reveal itself

BUG FIXES:
[FIXED] The "Back" and "Next" button sometimes has a gap through the middle of the button

[FIXED] The "Callisto" Header overlaps with the book cover

--- a/styles.css
+++ b/styles.css
@@ -38,17 +38,45 @@ body {
     display: grid;
     justify-content: center;
     align-items: center;
+    place-items: center;
 }
 .portfolio-book {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.portfolio-buttons {
+.eros-psycho-section {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+.eros-psycho-left-section {
+    width: 0px;
+    height: 500px;
+    transition: 1s;
+}
+.book-section {
+    opacity: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    transition: 2s;
+}
+.book-right-section {
+    width: 0px;
+    height: 500px;
+    transition: 2s;
+}
+.portfolio-buttons {
+    opacity: 0;
+    display: none;
+    position: absolute;
+    justify-items: center;
     align-items: center;
     z-index: 6;
+    transition: 1.5s;
 }
 .book {
     position: relative;
@@ -73,6 +101,25 @@ body {
     width: 400px;
     filter: drop-shadow(0 0 10px white);
 }
+.eros-psycho-temp {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+    width: 350px;
+    height: 500px;
+    cursor: pointer;
+}
+.eros-psycho-temp img {
+    width: 400px;
+    filter: drop-shadow(0 0 10px white);
+    transition: 0.5s;
+}
+.eros-psycho-temp img:hover {
+    width: 420px;
+    filter: drop-shadow(0 0 10px white);
+    transition: 0.5s;
+}
 .container-eros-psycho-book-bg {
     position: absolute;
     justify-content: center;
@@ -96,7 +143,7 @@ body {
 }
 .container-callisto-book-header {
     position: absolute;
-    z-index: 5;
+    z-index: 3;
     font-family: 'SingleGhost';
     font-size: 100px;
     color: white;
@@ -200,6 +247,7 @@ hr {
     text-shadow: 2px 0 rgb(0, 0, 0);
 }
 .arrow-book {
+    z-index: 6;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -211,6 +259,7 @@ hr {
     transition: 0.1s;
 }
 .blackout-button {
+    z-index: 6;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -241,12 +290,13 @@ hr {
 }
 .arrow-right .arrow-top, .arrow-left .arrow-bottom {
     transform: skew(60deg, 0deg);
+    box-shadow: 0 0px 1px 1px black, inset 0 0px 1px 1px black;
 }
 .arrow-right .arrow-bottom, .arrow-left .arrow-top {
     transform: skew(-60deg, 0deg);
+    box-shadow: 0 0px 1px 1px black, inset 0 0px 1px 1px black;
 }
 .arrow-book p, .blackout-button p {
     position: absolute;
-    z-index: 999;
-    place-items: center;
+    z-index: 6;
 }
